Start working on modal to display search result info.

--- a/client/src/styles/css/index.css
+++ b/client/src/styles/css/index.css
@@ -992,7 +992,7 @@ code {
 .displaySearchResultsContainer2 {
   height: 30vmin;
   width: 100%;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .displaySearchResultsContainer {
