--- a/client/src/styles/css/index.css
+++ b/client/src/styles/css/index.css
@@ -966,20 +966,21 @@ code {
   font-size: 20px;
   margin: 0 auto;
   font-weight: bold;
+  margin-right: 5%;
 }
 
 .addSongContainer {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
-  width: 80%;
+  width: 100%;
   margin-top: 3%;
   margin-bottom: 1%;
-  margin-left: -5%;
+  margin-left: -1%;
 }
 
 .addSongSearchContainer {
-  width: 60%;
+  width: 40%;
 }
 
 .addSongSearch {
@@ -988,6 +989,10 @@ code {
   margin-right: 0.5%;
   text-align: center;
   font-size: 12pt;
+}
+
+.randomSongButton {
+  margin-left: 5%;
 }
 
 .displaySearchResultsContainer2 {
@@ -1216,7 +1221,9 @@ code {
   font-size: 18px;
   padding-top: 0.25%;
   padding-right: 0.75%;
-  color: var(--buttonColor)
+  color: var(--buttonColor);
+  float: right;
+  width: 30px;
 }
 
 .songPlayingBar {
