--- a/client/src/styles/css/index.css
+++ b/client/src/styles/css/index.css
@@ -854,11 +854,11 @@ code {
   flex-direction: row;
   align-items: center;
   justify-content: space-evenly;
-  height: 100%;
+  height: 1px;
   padding-right: 5%;
   padding-left: 5%;
   padding-top: 2%;
-  padding-bottom: 2%;
+  flex: 1 1 auto;
 }
 .playlistScreenLeftBox {
   display: flex;
@@ -866,6 +866,7 @@ code {
   height: 100%;
   width: 35%;
   user-select: none;
+  padding-bottom: 2%;
 }
 
 .playlistScreenLeftContainer {
@@ -1110,25 +1111,41 @@ code {
   width: 60%;
   height: 100%;
   text-align: right;
+  box-sizing: border-box; 
+  overflow-y: scroll;
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none;  /* Internet Explorer 10+ */
+}
+
+.playlistSongsContainer::-webkit-scrollbar { /* WebKit */
+  width: 0;
+  height: 0;
 }
 
 .playlistSongsBox {
   display: flex;
   flex-direction: row;
-  text-align: center;
-  padding-top: 2%;
-  margin-bottom: 1%;
+  width: 90%;
+  text-align: left;
+  padding: 2% 1% 1% 1%;
 }
 .playlistSongTitleLabel, .playlistSongArtistLabel, .playlistSongDurationLabel {
+  user-select: none;
   font-size: 20px;
   font-style: italic;
 }
 
-.playlistSongTitleLabel { margin-left: 6%;}
+.playlistSongTitleLabel { 
+  width: 47%
+}
 
-.playlistSongArtistLabel { margin-left: 38.2%;}
+.playlistSongArtistLabel { 
+  width: 44%;
+}
 
-.playlistSongDurationLabel { margin-left: 33.5%;}
+.playlistSongDurationLabel { 
+
+}
 
 .playlistSongTitle, .playlistSongDuration, .playlistSongArtist {
   display: flex;
@@ -1177,16 +1194,15 @@ code {
 
 .playlistSongTitle {
   text-align: left;
+  width: 47%;
 }
 
 .playlistSongArtist {
-  position: absolute;
-  left: 67.5%;
+  width: 47%;
 }
 
 .playlistSongDuration {
-  position: absolute;
-  right: 8.6%;
+  
 }
 
 .playlistSongTitleLabel:hover, .playlistSongArtistLabel:hover, .playlistSongDurationLabel:hover {
@@ -1203,8 +1219,10 @@ code {
 .playlistSongBox {
   display: flex;
   align-items: center;
-  margin-top: 0.4%;
-  margin-bottom: 0.4;
+  width: 100%;
+  margin-top: 0.3%;
+  margin-bottom: 0.3%;
+  user-select: none;
 }
 
 .playlistSongBar {
@@ -1213,7 +1231,7 @@ code {
   border: outset;
   border-width: 1px;
   padding: 1%;
-  width: 100%;
+  width: 90%;
   display: flex;
 }
 
