--- a/client/src/styles/css/index.css
+++ b/client/src/styles/css/index.css
@@ -759,6 +759,13 @@ code {
 }
 
 /* VIEW PROFILE SCREEN */
+.viewProfileScreen {
+  background-color: var(--background);
+  display: flex;
+  flex: 1 1 auto;
+  height: 1px;
+}
+
 .viewProfileScreenContainer {
   display: flex;
   flex-direction: row;
