--- a/client/src/styles/css/index.css
+++ b/client/src/styles/css/index.css
@@ -1132,26 +1132,38 @@ code {
 .playlistSongsBox {
   display: flex;
   flex-direction: row;
-  width: 90%;
+  width: 100%;
   text-align: left;
-  padding: 2% 1% 1% 1%;
+  padding: 2% 0% 1% 0%;
+  margin-left: -0.5%;
 }
-.playlistSongTitleLabel, .playlistSongArtistLabel, .playlistSongDurationLabel {
+.playlistSongTitleLabel, .playlistSongArtistLabel, .playlistSongAlbumLabel, .playlistSongDurationLabel {
   user-select: none;
   font-size: 20px;
   font-style: italic;
 }
 
 .playlistSongTitleLabel { 
-  width: 47%
+  width: 36.5%;
 }
 
 .playlistSongArtistLabel { 
-  width: 44%;
+  width: 25.5%;
 }
 
-.playlistSongDurationLabel { 
+.playlistSongAlbumLabel { 
+  width: 26%;
+}
 
+.playlistSongTitleLabel:hover, .playlistSongArtistLabel:hover, .playlistSongAlbumLabel:hover, .playlistSongDurationLabel:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.playlistSongTitleLabel:active, .playlistSongArtistLabel:active, .playlistSongAlbumLabel:active, .playlistSongDurationLabel:active {
+  text-decoration: underline;
+  cursor: pointer;
+  color: var(--primary);
 }
 
 .playlistSongTitle, .playlistSongDuration, .playlistSongArtist {
@@ -1181,12 +1193,13 @@ code {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-right: -1%;
 }
 
 .removeSongIcon {
-  padding-top: 0.2%;
   color: var(--accent);
   padding-left: 1%;
+  width: 3px;
 }
 
 .playlistSongIcon:hover, .removeSongIcon:hover {
@@ -1199,28 +1212,25 @@ code {
   color: var(--buttonColor);
 }
 
-.playlistSongTitle {
+.playlistSongTitle, .playlistSongArtist, .playlistSongAlbum, .playlistSongDuration {
   text-align: left;
-  width: 47%;
+  overflow-x: hidden;
+  white-space: nowrap;
+}
+
+.playlistSongTitle {
+  width: 36%;
+  margin-right: 1.75%;
 }
 
 .playlistSongArtist {
-  width: 47%;
+  width: 25%;
+  margin-right: 2%;
 }
 
-.playlistSongDuration {
-  
-}
-
-.playlistSongTitleLabel:hover, .playlistSongArtistLabel:hover, .playlistSongDurationLabel:hover {
-  text-decoration: underline;
-  cursor: pointer;
-}
-
-.playlistSongTitleLabel:active, .playlistSongArtistLabel:active, .playlistSongDurationLabel:active {
-  text-decoration: underline;
-  cursor: pointer;
-  color: var(--primary);
+.playlistSongAlbum {
+  width: 28%;
+  margin-right: 2%;
 }
 
 .playlistSongBox {
@@ -1285,6 +1295,13 @@ code {
 
 .songPlay:hover, .songPause:hover {
   color: var(--secondary);
+}
+
+.irreversible {
+  margin-top: 1%;
+  color: #ff5647;
+  font-size: 24px;
+  font-weight: bolder;
 }
 
 
