--- a/client/src/styles/css/index.css
+++ b/client/src/styles/css/index.css
@@ -594,9 +594,13 @@ code {
   font-size: 12pt;
 }
 
-.playlistSubText {
-  text-align: left;
-  font-size: 13pt;
+.viewProfilePlaylistInfo {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  flex: 1 1 auto;
+  justify-content: center;
+  margin-left: 2%;
 }
 
 /* PROFILE SCREEN */
@@ -759,32 +763,58 @@ code {
 }
 
 /* VIEW PROFILE SCREEN */
-.viewProfileScreen {
+.viewProfileScreenOutermost {
   background-color: var(--background);
   display: flex;
-  flex: 1 1 auto;
-  height: 1px;
+  justify-content: center;
+  align-items: center;
+  padding: 2%;
 }
 
-.viewProfileScreenContainer {
+.profileRightScrollContainer {
+  overflow-y: auto;
+  overflow-x: hidden;
+  height: 90%;
+  width: 60%;
+  margin-left: 2%;
+}
+
+.profileContainerLeft {
   display: flex;
-  flex-direction: row;
-  width: 100%;
-  height: 100%;
-  margin: 2%;
+  flex-direction: column;
+  height: 90%;
+  width: 25%;
+  background-color: var(--secondary);
+  padding: 1%;
+  filter: drop-shadow(0px 0px 4px #333333);
+  width: 20%;
+}
+
+.profileContainerRight {
+  display: flex;
+  flex-direction: column;
+  background-color: var(--background);
+  padding: 1%;
+
 }
 
 .viewProfileScreenLabel {
   margin-top: 2%;
-  margin-bottom: 4%;
+  margin-bottom: 3%;
   font-weight: bold;
-  font-size: 18px;
+  font-size: 20px;
   color: var(--accent);
+}
+
+.viewProfileInfoBackground {
+  margin-top: 2%;
+  text-align: center;
 }
 
 .viewProfileTextArea {
   margin-top: -2%;
   margin-bottom: 14%;
+  font-size: 16px;
 }
 
 .viewProfilePlaylists {
@@ -800,46 +830,26 @@ code {
   background-color: var(--secondary);
 }
 
-.profileContainerLeft {
-  display: flex;
-  flex-direction: column;
-  height: 71%;
-  width: 25%;
-  margin-right: 1%;
-  background-color: var(--secondary);
-  padding: 1%;
-  filter: drop-shadow(5px 0px 0px var(--accent));
-}
-
-.profileContainerRight {
-  display: flex;
-  flex-direction: column;
-  border: #333333;
-  height: 71%;
-  width: 72%;
-  border-radius: 5px;
-  overflow-y: auto;
-  overflow-x: hidden;
-}
-
 .profileContainerTop {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   padding-bottom: 1%;
 }
 
-.profilePicture{
+.profilePicture {
   display: inline-block;
   height: 150px;
   width: 150px;
-  margin-bottom: 3%;
+  margin-bottom: 5%;
 }
 
 .profileName {
   display: flex;
-  width: 20%;
   justify-content: center;
-  margin-left: 22%;
+  margin-top: 5%;
+  font-size: 36px;
   color: var(--accent);
   text-align: center;
   font-style: italic;
@@ -848,11 +858,26 @@ code {
 .followButtonContainer {
   display: flex;
   justify-content: center;
-  margin-top: 20%;
 }
 
-.followButton {
-  width: 50%;
+.viewProfilePlaylistPic {
+  min-height: 150px;
+  max-height: 150px;
+  min-width: 150px;
+  max-width: 150px;
+}
+
+.playlistTitleText {
+  font-size: 24px;
+  font-style: italic;
+  color: var(--accent);
+}
+
+.playlistSubText {
+  text-align: left;
+  font-size: 16px;
+  margin-bottom: 0%;
+  color: var(--accent);
 }
 
 /* PLAYLIST SCREEN */
