--- a/client/src/styles/css/index.css
+++ b/client/src/styles/css/index.css
@@ -189,8 +189,8 @@ code {
 
 .dropdownChangeTheme {
   position: absolute;
-  left: 84%;
-  top: 90.5%;
+  left: 91%;
+  top: 91.5%;
 }
 
 /* NAVBAR */
@@ -621,6 +621,7 @@ code {
   width: 80%;
   height: 80%;
   margin-left: 10%;
+  margin-top: 10%;
   user-select: none;
   filter: drop-shadow(0px 0px 4px #333333);
 }
@@ -628,8 +629,8 @@ code {
 .profileOptionsText {
   font-size: 32px;
   text-align: center;
-  margin-top: 10%;
-  margin-bottom: 20%;
+  margin-top: 5%;
+  margin-bottom: 10%;
   margin-right: -17.6%;
   padding-top: 15%;
   padding-bottom: 15%;
@@ -646,8 +647,8 @@ code {
   display: flex;
   justify-content: center;
   margin-left: 20%;
-  margin-top: 10%;
-  margin-bottom: 30%;
+  margin-top: 5%;
+  margin-bottom: 20%;
 }
 
 .myProfileScreen {
@@ -753,6 +754,10 @@ code {
   width: 60%;
   margin-left: 2%;
   overflow-wrap: break-word;
+}
+
+.accountPrivacyPicker {
+  margin-bottom: 12.5%;
 }
 
 /* VIEW PROFILE SCREEN */
@@ -919,7 +924,7 @@ code {
 
 .playlistPlayAllButton {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   margin: 0 auto;
   margin-top: 2%;
   margin-bottom: 0%;
@@ -1133,7 +1138,7 @@ code {
   display: flex;
   flex-direction: column;
   margin-top: -3%;
-  width: 60%;
+  width: 65%;
   height: 100%;
   text-align: right;
   box-sizing: border-box; 
@@ -1162,11 +1167,11 @@ code {
 }
 
 .playlistSongTitleLabel { 
-  width: 36.5%;
+  width: 35.5%;
 }
 
 .playlistSongArtistLabel { 
-  width: 25.5%;
+  width: 24%;
 }
 
 .playlistSongAlbumLabel { 
@@ -1198,6 +1203,10 @@ code {
 
 .playlistSaveButton {
   width: 22%;
+}
+
+.playlistShuffleButton {
+  width: 33%;
 }
 
 .playlistSaveButton:hover {
@@ -1265,7 +1274,7 @@ code {
   border: outset;
   border-width: 1px;
   padding: 1%;
-  width: 90%;
+  width: 87%;
   display: flex;
 }
 
