--- a/client/src/styles/css/index.css
+++ b/client/src/styles/css/index.css
@@ -759,6 +759,7 @@ code {
   background-color: var(--secondary);
   color: var(--accent);
 }
+
 .profileFollowingInfo {
   width: 60%;
   margin-left: 2%;
@@ -875,9 +876,9 @@ code {
 }
 
 .playlistTitleText {
-  font-size: 24px;
-  font-style: italic;
+  font-size: 22px;
   color: var(--accent);
+  margin-bottom: 1%;
 }
 
 .playlistSubText {
@@ -1340,7 +1341,6 @@ code {
 }
 
 /* ADMIN/TEST/LOCKED SCREEN */
-
 .adminScreen {
   display: flex;
   flex-direction: column;
@@ -1356,6 +1356,107 @@ code {
   width: 95%;
   height: 85%;
   user-select: none;
+}
+
+/* USER SEARCH */
+.userSearch {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  max-height: 50vmin;
+  height: 50vmin;
+}
+
+.userSearchTopBar {
+  display: flex;
+}
+
+.userSearchDivider {
+  height: 10px;
+  width: 70%;
+  border-style: double;
+  border-width: 0 0 3px 0;
+  border-color: var(--secondary);
+}
+
+.userSearchResults {
+  height: 70%;
+  margin-top: -1%;
+  overflow: auto;
+  padding: 1%;
+  border-spacing: 100px;
+}
+
+.noUsersFound {
+  padding-top: 10%;
+}
+
+.userResultContainer2 {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.userResultContainer {
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  width: 80vmin;
+  padding: 2%;
+  margin-right: 2%;
+  border-radius: 5px;
+}
+
+.userResultContainer:hover {
+  background-color: var(--secondary);
+  cursor: pointer;
+}
+
+.userResultPfpImg {
+  width: 90px;
+  max-width: 90px;
+  height: 90px;
+  max-height: 90px;
+  border-radius: 50%;
+}
+
+.userResultUsername {
+  font-size: 20px;
+  font-weight: bold;
+  text-align: left;
+  margin-left: 1%;
+}
+
+.userResultInfo {
+  display: flex;
+  flex-direction: column;
+  margin-left: 1%;
+  text-align: left;
+}
+
+.userResultsFollowing {
+  color: var(--accent);
+  display: flex;
+  margin-top: 2%;
+  height: 35%;
+}
+
+.userResultsFollowing:hover {
+  cursor: pointer;
+  border-radius: 5px;
+  color: var(--accent);
+}
+
+.userResultFollowInfo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.userResultFollowerInfo {
+  margin-left: -10%;
+  margin-bottom: 4%;
 }
 
 /* ANIMATIONS */
