--- a/client/src/styles/css/index.css
+++ b/client/src/styles/css/index.css
@@ -448,6 +448,15 @@ code {
   overflow-y: auto;
 }
 
+.countryButtonContainerLeft {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  margin-top: 4%;
+  height: 15vmin;
+}
+
 .genreButtonContainer {
   display: flex;
   flex-wrap: wrap;
@@ -459,7 +468,7 @@ code {
 }
 
 .genreButton {
-  margin-bottom: 1%;
+  margin-bottom: 2%;
   overflow-y: auto;
 }
 
@@ -1486,6 +1495,72 @@ code {
 .userResultFollowerInfo {
   margin-left: -10%;
   margin-bottom: 4%;
+}
+
+/* VIEW PLAYLIST SCREEN */
+.viewPlaylistScreen {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  padding-right: 5%;
+  padding-left: 5%;
+  padding-top: 2%;
+  flex: 1 1 auto;
+}
+
+.viewPlaylistTitle {
+  margin-top: 3%;
+  font-size: 20px;
+  border-style: none;
+}
+
+.viewPlaylistTitleDivider {
+  width: 100%;
+}
+
+.viewPlaylistFilterDivider {
+  height: 10px;
+  margin: 1%;
+  margin-bottom: 1.5%;
+  width: 25%;
+  border-style: double;
+  border-width: 0 0 3px 0;
+  border-color: #999999;
+}
+
+.viewPlaylistScreenLeftContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  width: 100%;
+  height: 60%;
+  user-select: none;
+  user-select: none;
+  background-color: var(--secondary);
+  filter: drop-shadow(0px 0px 4px #333333);
+}
+
+.viewPlaylistPlayAllButton {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-bottom: 1.75%;
+}
+
+.viewPlaylistDescriptionText {
+  font-size: 16px;
+  padding: 1%;
+  margin: 3%;
+  margin-left: 4%;
+  margin-right: 6%;
+  text-align: left;
+  font-style: italic;
+  word-wrap: break-word;
+  height: 45%;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #999999;
 }
 
 /* ANIMATIONS */
